--- a/AZ.html
+++ b/AZ.html
@@ -8,6 +8,24 @@
     </head>
     <body
 
+    <header>
+        <div class="title">
+          <h1>AROUND THE WORLD</h1>
+        </div>
+        <nav>
+     <ul>
+       <li><a href="carousel.html">HOME</a></li>
+       <li><a href="#">PLACES</a>
+         <ul class="dropdown">
+           <li><a href="JVDG.html">Austria</a></li>
+           <li><a href="NN.html">Kenya</a></li>
+           <li><a href="AZ.html">New Zealand</a></li>
+         </ul>
+       </li>
+       <li><a href="about.html">ABOUT</a></li>
+     </ul>
+   </header>
+   
     
 
         <header>
