--- a/AZ.html
+++ b/AZ.html
@@ -13,25 +13,26 @@
           <h1>AROUND THE WORLD</h1>
         </div>
         <nav>
-     <ul>
-       <li><a href="carousel.html">HOME</a></li>
-       <li><a href="#">PLACES</a>
-         <ul class="dropdown">
-           <li><a href="JVDG.html">Austria</a></li>
-           <li><a href="NN.html">Kenya</a></li>
-           <li><a href="AZ.html">New Zealand</a></li>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#">PLACES</a>
+                     <ul class="dropdown">
+                     <li><a href="JVDG.html">Austria</a></li>
+                     <li><a href="NN.html">Kenya</a></li>
+                     <li><a href="AZ.html">New Zealand</a></li>
+                     </ul>
+               </li>
+                <li><a href="about.html">ABOUT</a></li>
          </ul>
-       </li>
-       <li><a href="about.html">ABOUT</a></li>
-     </ul>
+         </nav>
    </header>
    
     
 
-        <header>
-            <h1> Around the world to new zealand</h1>
+        <div class="header">
+            <h1> Around the world to New Zealand</h1>
             <p> These are photos I took from my travels during my gap year in 2018/2019</p>
-        </header>
+        </div>
         <div class="main">
             <article class="BildText">
                 <img src="images/WhatsApp Image 2020-11-25 at 17.45.45 (1).jpeg">
@@ -228,5 +229,5 @@
     <footer>
         <p>© 2020 Around The World. Created by Arianna, Joyce and Nay.</p>
       </footer>
-
+    
 </body>
