--- a/AZ.html
+++ b/AZ.html
@@ -1,8 +1,7 @@
 <body>
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet" type="text/css" href="AZ.css" >
         <title>Around the world</title>
-        <script src="script.js"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     </head>
