--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
 <script src="script.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
-	
+
+<header> 
+  <div class="title">
+    <h1>AROUND THE WORLD</h1>
+  </div>
+  <nav>
+      <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="#">PLACES</a>
+               <ul class="dropdown">
+               <li><a href="JVDG.html">Austria</a></li>
+               <li><a href="NN.html">Kenya</a></li>
+               <li><a href="AZ.html">New Zealand</a></li>
+               </ul>
+         </li>
+          <li><a href="about.html">ABOUT</a></li>
+   </ul>
+   </nav>
+</header> 
+
+
 <head>
 <!-- Bootstrap and FontAwesome cdn links -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
