--- a/NN.html
+++ b/NN.html
@@ -6,22 +6,25 @@
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 
         <link rel="JGStyle" type="text/css" href="JG.css" >
-        <div class="title">
-            <h1>AROUND THE WORLD</h1>
-          </div>
-          <nav>
-       <ul>
-         <li><a href="carousel.html">HOME</a></li>
-         <li><a href="#">PLACES</a>
-           <ul class="dropdown">
-             <li><a href="JVDG.html">Austria</a></li>
-             <li><a href="NN.html">Kenya</a></li>
-             <li><a href="AZ.html">New Zealand</a></li>
-           </ul>
-         </li>
-         <li><a href="about.html">ABOUT</a></li>
-       </ul>
-    </head>
+          <header> 
+            <div class="title">
+              <h1>AROUND THE WORLD</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#">PLACES</a>
+                         <ul class="dropdown">
+                         <li><a href="JVDG.html">Austria</a></li>
+                         <li><a href="NN.html">Kenya</a></li>
+                         <li><a href="AZ.html">New Zealand</a></li>
+                         </ul>
+                   </li>
+                    <li><a href="about.html">ABOUT</a></li>
+             </ul>
+             </nav>
+       </header> 
+       
     <body>
         <header>
             <h1> Around the world to Kenaya</h1>
@@ -74,3 +77,5 @@
         </div>
     </body>
 </body> 
+
+<footer>       <p>© 2020 Around The World. Created by Arianna, Joyce and Nay.</p>     </footer>
