--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="carouselStyle.css" rel="stylesheet" type="text/css">
-<script src="script.js"></script>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+
 
 <header> 
   <div class="title">
@@ -30,6 +27,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="carouselStyle.css" rel="stylesheet" type="text/css">
+<script src="script.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
 
 <main>
@@ -49,12 +50,13 @@
 <div class="carousel-inner">
   <div class="carousel-item active"> 
     <a href="AZ.html">
-    <img src="https://drive.google.com/uc?export=download&id=1Sobvo8kGM8zdYiW20dVowe65Pj7iwlj-" class="d-block w-100"  alt="New Zealand Landscape" width="550" height="450" >
+    <img src="images/b1.jpeg" class="d-block w-100"  alt="New Zealand Landscape" width="550" height="450" >
         <div class="carousel-caption">
         <h3> Around The World To New Zealand</h3>
         </div>       
     </a>
   </div>
+</div>
 
   <div class="carousel-item">
     <a href="JG.html">
@@ -73,7 +75,7 @@
     </div>     
   </a>
   </div>
-  </div>	
+  	
                     
 <!-- Left and Right controls-->
 	
@@ -88,8 +90,9 @@
 </a>
 </div>
                                                  
+</div>
 
-
+</main>
 
 <!-- Bootstrap needs the these 3 javascript links for things like carousel and modals to work properly.
 we also need jQuery for the code for the "scroll to the top" code in scripts.js -->
@@ -98,3 +101,6 @@ we also need jQuery for the code for the "scroll to the top" code in scripts.js 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
+
+<footer>       <p>© 2020 Around The World. Created by Arianna, Joyce and Nay.</p>     </footer>
+</html>
