--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link href="carouselStyle.css" rel="stylesheet" type="text/css">
+<script src="script.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 
 <header> 
   <div class="title">
@@ -27,10 +30,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="carouselStyle.css" rel="stylesheet" type="text/css">
-<script src="script.js"></script>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
 
 <main>
@@ -56,11 +55,10 @@
         </div>       
     </a>
   </div>
-</div>
 
   <div class="carousel-item">
-    <a href="JVDG.html">
-    <img src="images/soldenaustria.jpg" class="d-block w-100" alt ="Austria Ski slope" width="550" height="450">
+    <a href="JG.html">
+    <img src="https://drive.google.com/uc?export=download&id=14nmlNU1JuXYfqBQGdspg2gJUrLQl70ow" class="d-block w-100" alt ="Austria Ski slope" width="550" height="450">
         <div class="carousel-caption">
         <h3> Around The World To Austria </h3>
         </div>             
@@ -75,7 +73,7 @@
     </div>     
   </a>
   </div>
-  	
+  </div>	
                     
 <!-- Left and Right controls-->
 	
@@ -90,9 +88,8 @@
 </a>
 </div>
                                                  
-</div>
 
-</main>
+
 
 <!-- Bootstrap needs the these 3 javascript links for things like carousel and modals to work properly.
 we also need jQuery for the code for the "scroll to the top" code in scripts.js -->
@@ -103,4 +100,3 @@ we also need jQuery for the code for the "scroll to the top" code in scripts.js 
 </body>
 
 <footer>       <p>© 2020 Around The World. Created by Arianna, Joyce and Nay.</p>     </footer>
-</html>
