--- a/NN.html
+++ b/NN.html
@@ -4,7 +4,7 @@
         <script src="script.js"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
-
+        </head>
         <link rel="JGStyle" type="text/css" href="JG.css" >
           <header> 
             <div class="title">
@@ -60,19 +60,19 @@
             </article>
 
             <article class="Bild">
-                <img src="https://drive.google.com/uc?export=download&id=1Vtbxzz_DL9PU63mMjvTm8gi3O1upkT2S" alt="Lioness">
+                <img src="images/lioness.JPG" alt="Lioness">
             </article>
             
             <div class="BildBild">
-                <img src="https://drive.google.com/uc?export=download&id=1eOxL0f-bS-1r3SnJily5p-Tavov6SFEk" class="left" alt="monkey eating fruit">
-                <img src="https://drive.google.com/uc?export=download&id=1e6v6dtFAI58NT1jBRp4q0zbJVE-pUmwY" class="right" alt="Monkey eating fruit">
+                <img src="images/monkey.JPG" class="left" alt="monkey eating fruit">
+                <img src="images/monkey2.jpg" class="right" alt="Monkey eating fruit">
             </div>
             <article class="Bild">
-                <img src="https://drive.google.com/uc?export=download&id=16i226u4xW4_LDpGOjkYrzWfAt4M_WOYu" alt="Tree">
+                <img src="images/tree.JPG" alt="Tree">
             </article>
             <div class="BildBild">
-                <img src="https://drive.google.com/uc?export=download&id=1n4JbkyRRXy3AQgfk17XfcFUcjzM93nDv" class="left" alt="Rift Valley">
-                <img src="https://drive.google.com/uc?export=download&id=1ktuwXBvsV4KX3tG-dAAH8r2-pW1FGmQl" class="right" alt="Zebras">
+                <img src="images/rift valley kenya.JPG" class="left" alt="Rift Valley">
+                <img src="images/zebras.JPG" class="right" alt="Zebras">
             </div>
         </div>
     </body>
