--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="carousel-inner">
   <div class="carousel-item active"> 
     <a href="AZ.html">
-    <img src="images/b1.jpeg" class="d-block w-100"  alt="New Zealand Landscape" width="550" height="450" >
+    <img src="images/carouselA.jpg" class="d-block w-100"  alt="New Zealand Landscape" width="550" height="450" >
         <div class="carousel-caption">
         <h3> Around The World To New Zealand</h3>
         </div>       
@@ -58,7 +58,7 @@
 
   <div class="carousel-item">
     <a href="JVDG.html">
-    <img src="images/soldenaustria.jpg" class="d-block w-100" alt ="Austria Ski slope" width="550" height="450">
+    <img src="images/carouselJ.jpg" class="d-block w-100" alt ="Austria Ski slope" width="550" height="450">
         <div class="carousel-caption">
         <h3> Around The World To Austria </h3>
         </div>             
@@ -67,7 +67,7 @@
                     
   <div class="carousel-item">
     <a href="NN.html">
-    <img src="https://drive.google.com/uc?export=download&id=18EI0-l0rWaKnDdv8KXRoUYUcMFIglXHp"  class="d-block w-100" alt="Lioness"  alt ="Monkey eating fruit" width="550" height="450"  >
+    <img src="images/monkey.JPG"  class="d-block w-100"  alt ="Monkey eating fruit" width="550" height="450"  >
     <div class="carousel-caption">
       <h3> Around The World To Kenya </h3>
     </div>     
