--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     
     <div class="aboutus">    
         <p> This website was created by Arianna, Joyce and Nay as part of the Code First Girls introduction to Web Development course. <br><br>We've created a travel blog to explore all the wonderful places <strong>around the world</strong> which we're not able to visit right now. <br><br>Try to stay positive and test negative! &hearts;</p>
-        <img src="codefirstgirls.png" alt="code first girls logo">
+        <img src="codefirstgirls.jpg" alt="code first girls logo">
     </div>
     
     <footer>
