--- a/NN.html
+++ b/NN.html
@@ -32,7 +32,7 @@
         </header>
         <div class="main">
             <article class="BildText">
-                <img src="https://drive.google.com/uc?export=download&id=1n4JbkyRRXy3AQgfk17XfcFUcjzM93nDv" alt="Rift Valley">
+                <img src="images/rift valley kenya" alt="Rift Valley">
                 <div class="textbox">
                       <h2>Places I visited</h2>
                     <ul> 
@@ -45,8 +45,8 @@
                 </div>
             </article>
             <div class="BildBild">
-                <img src="https://drive.google.com/uc?export=download&id=1WEzGSbluuofb8xCiD19huYjvXPIGFcmE" class="left" alt="Elephant">
-                <img src="https://drive.google.com/uc?export=download&id=1FzxLkjMGzwEZM9-RjyDn_2c1FZoqN1ks" class="right" alt="Giraffes">
+                <img src="images/elephant" class="left" alt="Elephant">
+                <img src="images/giraffe" class="right" alt="Giraffes">
             </div>
             <article>
                 <div class="textbox">
