--- a/AZ.html
+++ b/AZ.html
@@ -29,7 +29,7 @@
     
 
         <div class="header">
-            <h1> Around the world to New Zealand</h1>
+            <h1> Off to New Zealand</h1>
             <p> These are photos I took from my travels during my gap year in 2018/2019</p>
         </div>
         <div class="main">
