--- a/NN.html
+++ b/NN.html
@@ -27,7 +27,7 @@
        
     <body>
         <header>
-            <h1> Around the world to Kenya</h1>
+            <h1> Grab your suncream, we're off to Kenya!</h1>
             <p> In 2018 I travelled to Nairobi, Kenya. These are a few snaps I took while there.</p>
         </header>
         <div class="main">
