--- a/NN.html
+++ b/NN.html
@@ -1,4 +1,5 @@
-<body> 
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="NN.css" >
         <script src="script.js"></script>
