--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<title>Around The World</title>
 </head>
 
 
@@ -82,7 +83,8 @@
   <span class="carousel-control-right" aria-hidden="true"></span>
   <span class="sr-only">Next</span>
 </a>
-</div>
+	    </div>
+	</div>
                                                  
 
 
@@ -94,6 +96,8 @@ we also need jQuery for the code for the "scroll to the top" code in scripts.js 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </main>
+	
+<footer>       <p>© 2020 Around The World. Created by Arianna, Joyce and Nay.</p>     </footer>
 </body>
 
-<footer>       <p>© 2020 Around The World. Created by Arianna, Joyce and Nay.</p>     </footer>
+
