--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
           <li><a href="index.html">HOME</a></li>
           <li><a href="#">PLACES</a>
-               <ul class="dropdown">
+               <ul class="drop-down">
                <li><a href="JVDG.html">Austria</a></li>
                <li><a href="NN.html">Kenya</a></li>
                <li><a href="AZ.html">New Zealand</a></li>
